[gd_scene load_steps=46 format=3 uid="uid://dimoqqt4yrqb5"]

[ext_resource type="Script" path="res://scenes/main_map.gd" id="1_y20xl"]
[ext_resource type="PackedScene" uid="uid://jjrk76mahvvy" path="res://scenes/baby_spawner.tscn" id="2_4s0kg"]
[ext_resource type="PackedScene" uid="uid://bggle8o2l41nh" path="res://scenes/bird.tscn" id="2_qfris"]
[ext_resource type="Texture2D" uid="uid://digg5wrtuutcr" path="res://images/karte_01 neu.png" id="2_y3dwu"]
[ext_resource type="PackedScene" uid="uid://dhk2djqpfh5aa" path="res://scenes/marker.tscn" id="3_qcu2i"]
[ext_resource type="Texture2D" uid="uid://bbl720q0m588y" path="res://images/birdcoin.PNG" id="6_jqa5o"]
[ext_resource type="Script" path="res://gui/day_end_popup.gd" id="7_5by8m"]
[ext_resource type="LabelSettings" uid="uid://bxoy805gkpher" path="res://gui/label_settings_small.tres" id="7_gfot6"]
[ext_resource type="LabelSettings" uid="uid://ccrc5drs0nt3v" path="res://gui/titles_1.tres" id="7_idixr"]
[ext_resource type="Texture2D" uid="uid://dbgm8d1rhw3lp" path="res://images/Sonnenuhr.png" id="8_ssstx"]
[ext_resource type="Texture2D" uid="uid://clvoir8yejuf0" path="res://images/Zeiger.png" id="9_3ug3h"]
[ext_resource type="Texture2D" uid="uid://c6nhvlyr75ucq" path="res://images/papiertextur_farbe.png" id="9_62xih"]
[ext_resource type="LabelSettings" uid="uid://ditbrm271efp8" path="res://gui/label_settings_medium.tres" id="9_l1ijk"]
[ext_resource type="FontFile" uid="uid://bby7breuoihqa" path="res://gui/DarumadropOne-Regular.ttf" id="10_5pm8n"]
[ext_resource type="PackedScene" uid="uid://bbpjdrfn7calm" path="res://scenes/worker_image.tscn" id="10_bbyyw"]
[ext_resource type="LabelSettings" uid="uid://bxu4exj1efhsy" path="res://gui/label_settings_35.tres" id="10_xnfew"]
[ext_resource type="Theme" uid="uid://dd2xtxl27npqh" path="res://gui/theme.tres" id="12_2caqd"]
[ext_resource type="SpriteFrames" uid="uid://d1vbk2ujt5nbb" path="res://scenes/worker_image_frames.tres" id="13_dbjeb"]
[ext_resource type="Texture2D" uid="uid://bgh6hk44h2nrx" path="res://images/rahmen/rahmen.png" id="14_g2vci"]
[ext_resource type="AudioStream" uid="uid://b3mgaukswhkl6" path="res://sound/click.wav" id="16_kt7bk"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_h50te"]
vertices = PackedVector2Array(1280, 0, 1280, 720, 0, 720, 0, 0)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(0, 0, 0, 720, 1280, 720, 1280, 0)])

[sub_resource type="LabelSettings" id="LabelSettings_ih6c6"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_1qcnq"]
font = ExtResource("10_5pm8n")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_et34y"]
font = ExtResource("10_5pm8n")
font_size = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fl47m"]

[sub_resource type="LabelSettings" id="LabelSettings_4x0dq"]
font = ExtResource("10_5pm8n")
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_ekvb1"]
font = ExtResource("10_5pm8n")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_ebxql"]
font = ExtResource("10_5pm8n")
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_ova1h"]
font = ExtResource("10_5pm8n")
font_size = 26
font_color = Color(1, 1, 1, 0.705882)

[sub_resource type="LabelSettings" id="LabelSettings_xpdek"]
font = ExtResource("10_5pm8n")
font_size = 32
font_color = Color(1, 1, 1, 0.784314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dwyps"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p4tbf"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3iysu"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nol1"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="Theme" id="Theme_xjjsl"]
Button/styles/focus = SubResource("StyleBoxFlat_dwyps")
Button/styles/hover = SubResource("StyleBoxFlat_p4tbf")
Button/styles/normal = SubResource("StyleBoxFlat_3iysu")
Button/styles/pressed = SubResource("StyleBoxFlat_3nol1")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7c77h"]
bg_color = Color(0, 0, 0, 0.588235)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejjjn"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mjy6l"]
bg_color = Color(0.341176, 0.419608, 0.439216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_xhkmr"]
line_spacing = -6.0
font = ExtResource("10_5pm8n")
font_size = 21

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kr0sy"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hxy4a"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cgx1x"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bymy4"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_und64"]
bg_color = Color(0, 0, 0, 0.392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dct7x"]
bg_color = Color(0.341176, 0.419608, 0.439216, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="main_map" type="Node2D"]
script = ExtResource("1_y20xl")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_h50te")
metadata/_edit_lock_ = true

[node name="WorldModulate" type="Node2D" parent="NavigationRegion2D"]

[node name="Welt01" type="Sprite2D" parent="NavigationRegion2D/WorldModulate"]
scale = Vector2(0.330902, 0.330902)
texture = ExtResource("2_y3dwu")
centered = false

[node name="birds" type="Node2D" parent="NavigationRegion2D/WorldModulate"]

[node name="Bird" parent="NavigationRegion2D/WorldModulate/birds" instance=ExtResource("2_qfris")]
position = Vector2(593, 348)

[node name="BabySpawner" parent="NavigationRegion2D" instance=ExtResource("2_4s0kg")]
position = Vector2(20, 20)
metadata/_edit_lock_ = true

[node name="end_marker_rabbit" parent="NavigationRegion2D/BabySpawner" groups=["end_rabbit"] instance=ExtResource("3_qcu2i")]
position = Vector2(983, 597)
animal_type = 1
marker_type = 1

[node name="end_marker_fox" parent="NavigationRegion2D/BabySpawner" groups=["end_fox"] instance=ExtResource("3_qcu2i")]
visible = false
position = Vector2(503, 278)
marker_type = 1

[node name="end_marker_bear" parent="NavigationRegion2D/BabySpawner" groups=["end_bear"] instance=ExtResource("3_qcu2i")]
visible = false
position = Vector2(774, 352)
animal_type = 5
marker_type = 1

[node name="end_marker_sheep" parent="NavigationRegion2D/BabySpawner" groups=["end_sheep"] instance=ExtResource("3_qcu2i")]
visible = false
position = Vector2(271, 143)
animal_type = 4
marker_type = 1

[node name="end_marker_cat" parent="NavigationRegion2D/BabySpawner" groups=["end_cat"] instance=ExtResource("3_qcu2i")]
visible = false
position = Vector2(1097, 219)
animal_type = 2
marker_type = 1

[node name="end_marker_dog" parent="NavigationRegion2D/BabySpawner" groups=["end_dog"] instance=ExtResource("3_qcu2i")]
visible = false
position = Vector2(147, 527)
animal_type = 3
marker_type = 1

[node name="BirdCoinGUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 14.0
offset_top = 655.0
offset_right = 54.0
offset_bottom = 695.0

[node name="BirdCoinCount" type="Label" parent="BirdCoinGUI"]
layout_mode = 2
offset_left = 94.0
offset_top = -16.0
offset_right = 111.0
offset_bottom = 29.0
size_flags_vertical = 1
text = "0"
label_settings = SubResource("LabelSettings_ih6c6")

[node name="Sprite2D" type="Sprite2D" parent="BirdCoinGUI"]
position = Vector2(46, 6)
scale = Vector2(0.75, 0.75)
texture = ExtResource("6_jqa5o")

[node name="TimeArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1280.0
offset_right = 1320.0
offset_bottom = 40.0

[node name="TimeLabel" type="Label" parent="TimeArea"]
visible = false
layout_mode = 0
offset_left = -104.0
offset_top = 37.0
offset_right = -20.0
offset_bottom = 84.0
text = "06:00"
label_settings = SubResource("LabelSettings_1qcnq")
horizontal_alignment = 2

[node name="DayLabel" type="Label" parent="TimeArea"]
layout_mode = 0
offset_left = -136.0
offset_top = 3.0
offset_right = -19.0
offset_bottom = 50.0
text = "day 1 / 7"
label_settings = SubResource("LabelSettings_et34y")
horizontal_alignment = 2

[node name="TimeTimer" type="Timer" parent="TimeArea"]
autostart = true

[node name="Sonnenuhr" type="Sprite2D" parent="TimeArea"]
position = Vector2(-76, 97)
scale = Vector2(0.1, 0.1)
texture = ExtResource("8_ssstx")

[node name="Zeiger" type="Node2D" parent="TimeArea/Sonnenuhr"]
position = Vector2(-20, 39.9999)

[node name="Zeiger" type="Sprite2D" parent="TimeArea/Sonnenuhr/Zeiger"]
position = Vector2(0, -10)
rotation = 2.30486
scale = Vector2(0.7, 0.7)
texture = ExtResource("9_3ug3h")
offset = Vector2(110, -80)

[node name="Polygon2D" type="Polygon2D" parent="TimeArea/Sonnenuhr"]
visible = false
color = Color(1, 0.286275, 0.27451, 1)
polygon = PackedVector2Array(-30, 360, -110, 530, 40, 530)

[node name="DayEndPopup" type="Panel" parent="."]
process_mode = 3
visible = false
custom_minimum_size = Vector2(1180, 0)
offset_left = 46.0
offset_top = 60.0
offset_right = 1226.0
offset_bottom = 660.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_fl47m")
script = ExtResource("7_5by8m")
metadata/_edit_lock_ = true

[node name="PapiertexturFarbe" type="Sprite2D" parent="DayEndPopup"]
position = Vector2(597, 302)
scale = Vector2(0.636763, 0.636763)
texture = ExtResource("9_62xih")
metadata/_edit_lock_ = true

[node name="DayEnd" type="Control" parent="DayEndPopup"]
process_mode = 3
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -337.0
offset_top = -22.0
offset_right = -297.0
offset_bottom = 18.0
grow_horizontal = 2
rotation = -0.0455155

[node name="Title" type="Label" parent="DayEndPopup/DayEnd"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -207.991
offset_top = 39.4873
offset_right = 286.009
offset_bottom = 159.487
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 1
text = "End of the day"
label_settings = SubResource("LabelSettings_4x0dq")

[node name="Babies" type="Control" parent="DayEndPopup/DayEnd"]
anchors_preset = 0
offset_left = -456.669
offset_top = -121.084
offset_right = -416.668
offset_bottom = -81.0837

[node name="BabiesDeliveredTitle" type="Label" parent="DayEndPopup/DayEnd/Babies"]
layout_mode = 2
offset_left = 280.193
offset_top = 295.726
offset_right = 538.193
offset_bottom = 350.726
size_flags_horizontal = 0
text = "Babies delivered:"
label_settings = ExtResource("10_xnfew")

[node name="BabiesDeliveredResult" type="Label" parent="DayEndPopup/DayEnd/Babies"]
layout_mode = 2
offset_left = 527.0
offset_top = 297.0
offset_right = 586.0
offset_bottom = 352.0
text = "0"
label_settings = ExtResource("10_xnfew")
horizontal_alignment = 2

[node name="BabyBonus" type="Control" parent="DayEndPopup/DayEnd/Babies"]
anchors_preset = 0
offset_left = 613.535
offset_top = 303.41
offset_right = 653.535
offset_bottom = 343.41
rotation = -0.131859

[node name="Polygon2D" type="Polygon2D" parent="DayEndPopup/DayEnd/Babies/BabyBonus"]
color = Color(0.356863, 0.517647, 0.756863, 1)
polygon = PackedVector2Array(-24.4201, 3.66989, 47.5555, -6.79449, 52.8387, 31.7423, -25.5255, 26.8383)

[node name="Sprite2D" type="Sprite2D" parent="DayEndPopup/DayEnd/Babies/BabyBonus"]
position = Vector2(34, 12)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_jqa5o")

[node name="Label" type="Label" parent="DayEndPopup/DayEnd/Babies/BabyBonus"]
layout_mode = 0
offset_left = -19.0
offset_top = -3.0
offset_right = 21.0
offset_bottom = 28.0
text = "+5"
label_settings = ExtResource("7_gfot6")
horizontal_alignment = 2

[node name="EarnedToday" type="Control" parent="DayEndPopup/DayEnd"]
anchors_preset = 0
offset_left = -484.086
offset_top = -53.0808
offset_right = -444.086
offset_bottom = -13.0807

[node name="title" type="Label" parent="DayEndPopup/DayEnd/EarnedToday"]
layout_mode = 2
offset_left = 308.612
offset_top = 280.499
offset_right = 525.612
offset_bottom = 335.499
text = "Earned today: "
label_settings = ExtResource("10_xnfew")

[node name="result" type="Label" parent="DayEndPopup/DayEnd/EarnedToday"]
layout_mode = 2
offset_left = 549.0
offset_top = 277.0
offset_right = 614.0
offset_bottom = 332.0
text = "0"
label_settings = ExtResource("10_xnfew")
horizontal_alignment = 2

[node name="Costs" type="Control" parent="DayEndPopup/DayEnd"]
anchors_preset = 0
offset_left = -536.196
offset_top = -29.8679
offset_right = -496.196
offset_bottom = 10.1321

[node name="EmployeeCostsTitle" type="Label" parent="DayEndPopup/DayEnd/Costs"]
layout_mode = 2
offset_left = 364.019
offset_top = 305.217
offset_right = 531.019
offset_bottom = 343.217
size_flags_horizontal = 0
text = "Employee costs:"
label_settings = ExtResource("10_xnfew")

[node name="EmployeeCostsResult" type="Label" parent="DayEndPopup/DayEnd/Costs"]
layout_mode = 2
offset_left = 602.0
offset_top = 306.0
offset_right = 667.0
offset_bottom = 361.0
text = "0"
label_settings = ExtResource("10_xnfew")
horizontal_alignment = 2

[node name="Total" type="Control" parent="DayEndPopup/DayEnd"]
anchors_preset = 0
offset_left = 0.738922
offset_top = 357.404
offset_right = 40.7389
offset_bottom = 397.404

[node name="TotalEarnedToday" type="Label" parent="DayEndPopup/DayEnd/Total"]
layout_mode = 0
offset_left = -130.0
offset_top = -22.0
offset_right = 206.0
offset_bottom = 40.0
size_flags_horizontal = 0
text = "Total earned today"
label_settings = SubResource("LabelSettings_ekvb1")

[node name="result" type="Label" parent="DayEndPopup/DayEnd/Total"]
layout_mode = 0
offset_left = 25.0
offset_top = 42.0
offset_right = 76.0
offset_bottom = 89.0
text = "+10"
label_settings = ExtResource("9_l1ijk")

[node name="Sprite2D" type="Sprite2D" parent="DayEndPopup/DayEnd/Total"]
position = Vector2(-17, 69)
scale = Vector2(0.76087, 0.76087)
texture = ExtResource("6_jqa5o")

[node name="EmployeeManagement" type="Control" parent="DayEndPopup"]
process_mode = 3
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 192.0
offset_top = -592.0
offset_right = 232.0
offset_bottom = -552.0
grow_horizontal = 2
grow_vertical = 0
rotation = 0.0281594
metadata/_edit_group_ = true

[node name="Title" type="Label" parent="DayEndPopup/EmployeeManagement"]
layout_mode = 0
offset_left = -47.6572
offset_top = -22.6672
offset_right = 320.343
offset_bottom = 97.3328
rotation = 0.144336
text = "Employees"
label_settings = SubResource("LabelSettings_ebxql")

[node name="WorkerImage" parent="DayEndPopup/EmployeeManagement" instance=ExtResource("10_bbyyw")]
layout_mode = 0
offset_left = -117.433
offset_top = 128.357
offset_right = -67.4326
offset_bottom = 198.357
rotation = 0.0881322
scale = Vector2(1.4, 1.4)
worker_name = 1

[node name="WorkerImage2" parent="DayEndPopup/EmployeeManagement" instance=ExtResource("10_bbyyw")]
layout_mode = 0
offset_left = 6.25073
offset_top = 150.884
offset_right = 56.2507
offset_bottom = 220.884
scale = Vector2(1.4, 1.4)

[node name="WorkerImage3" parent="DayEndPopup/EmployeeManagement" instance=ExtResource("10_bbyyw")]
layout_mode = 0
offset_left = 132.159
offset_top = 181.351
offset_right = 182.159
offset_bottom = 251.351
scale = Vector2(1.4, 1.4)

[node name="WorkerImage4" parent="DayEndPopup/EmployeeManagement" instance=ExtResource("10_bbyyw")]
layout_mode = 0
offset_left = 267.64
offset_top = 196.542
offset_right = 317.64
offset_bottom = 266.542
scale = Vector2(1.4, 1.4)

[node name="WorkerImage6" parent="DayEndPopup/EmployeeManagement" instance=ExtResource("10_bbyyw")]
layout_mode = 0
offset_left = -134.215
offset_top = 313.903
offset_right = -84.215
offset_bottom = 383.903
rotation = 0.0512474
scale = Vector2(1.4, 1.4)

[node name="WorkerImage7" parent="DayEndPopup/EmployeeManagement" instance=ExtResource("10_bbyyw")]
layout_mode = 0
offset_left = -10.6163
offset_top = 333.431
offset_right = 39.3837
offset_bottom = 403.431
rotation = -0.060876
scale = Vector2(1.4, 1.4)

[node name="WorkerImage8" parent="DayEndPopup/EmployeeManagement" instance=ExtResource("10_bbyyw")]
layout_mode = 0
offset_left = 127.033
offset_top = 354.564
offset_right = 177.033
offset_bottom = 424.564
rotation = 0.0226931
scale = Vector2(1.4, 1.4)

[node name="WorkerImage9" parent="DayEndPopup/EmployeeManagement" instance=ExtResource("10_bbyyw")]
layout_mode = 0
offset_left = 255.799
offset_top = 379.948
offset_right = 305.799
offset_bottom = 449.948
rotation = -0.0657627
scale = Vector2(1.4, 1.4)

[node name="NextDay" type="Control" parent="DayEndPopup"]
anchors_preset = 0

[node name="NextDayButton" type="Button" parent="DayEndPopup/NextDay"]
layout_mode = 0
offset_left = 502.0
offset_top = 523.0
offset_right = 711.0
offset_bottom = 572.0
theme = ExtResource("12_2caqd")
theme_override_font_sizes/font_size = 30
text = "Start next day"

[node name="DayFact" type="Control" parent="DayEndPopup"]
anchors_preset = 0
offset_left = -29.0
offset_top = 14.0
offset_right = -29.0
offset_bottom = 14.0

[node name="Fact" type="Label" parent="DayEndPopup/DayFact"]
layout_mode = 0
offset_left = 94.0
offset_top = 515.0
offset_right = 325.0
offset_bottom = 557.0
text = "Storks can use tools!"
label_settings = SubResource("LabelSettings_ova1h")

[node name="Title" type="Label" parent="DayEndPopup/DayFact"]
layout_mode = 0
offset_left = 94.0
offset_top = 475.0
offset_right = 306.0
offset_bottom = 526.0
text = "Fact of the day"
label_settings = SubResource("LabelSettings_xpdek")

[node name="WorkerPanelBackdrop" type="Button" parent="."]
process_mode = 3
visible = false
offset_right = 1280.0
offset_bottom = 720.0
theme = SubResource("Theme_xjjsl")
theme_override_styles/normal = SubResource("StyleBoxFlat_7c77h")
theme_override_styles/hover = SubResource("StyleBoxFlat_7c77h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7c77h")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ejjjn")
theme_override_styles/focus = SubResource("StyleBoxFlat_7c77h")

[node name="WorkerPanel" type="Panel" parent="."]
process_mode = 3
visible = false
custom_minimum_size = Vector2(700, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 253.0
offset_top = 216.0
offset_right = 953.0
offset_bottom = 516.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mjy6l")

[node name="HBoxContainer" type="HBoxContainer" parent="WorkerPanel"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 0
offset_left = 277.0
offset_top = 233.0
offset_right = 657.0
offset_bottom = 273.0
theme_override_constants/separation = 15
alignment = 2

[node name="CancelButton" type="Button" parent="WorkerPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("12_2caqd")
theme_override_fonts/font = ExtResource("10_5pm8n")
theme_override_font_sizes/font_size = 24
text = "Cancel"

[node name="FireButton" type="Button" parent="WorkerPanel/HBoxContainer"]
layout_mode = 2
theme = ExtResource("12_2caqd")
theme_override_fonts/font = ExtResource("10_5pm8n")
theme_override_font_sizes/font_size = 24
text = "Fire Eduardo"
alignment = 2

[node name="WorkerName" type="Label" parent="WorkerPanel"]
layout_mode = 0
offset_left = 272.0
offset_right = 483.0
offset_bottom = 91.0
text = "Eduardo"
label_settings = ExtResource("7_idixr")

[node name="BirdImage" type="AnimatedSprite2D" parent="WorkerPanel"]
position = Vector2(96, 150)
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("13_dbjeb")
animation = &"stan"
metadata/_edit_lock_ = true

[node name="Rahmen" type="Sprite2D" parent="WorkerPanel"]
position = Vector2(102, 127)
scale = Vector2(0.75, 0.75)
texture = ExtResource("14_g2vci")
metadata/_edit_lock_ = true

[node name="BirdBio" type="Label" parent="WorkerPanel"]
layout_mode = 0
offset_left = 276.0
offset_top = 65.0
offset_right = 666.0
offset_bottom = 224.0
text = "Our most loyal, hardworking stork! How would this company ever have worked if old Stan didn’t help out wherever he could? "
label_settings = SubResource("LabelSettings_xhkmr")
vertical_alignment = 1
autowrap_mode = 2

[node name="HirePanelBackdrop" type="Button" parent="."]
process_mode = 3
visible = false
offset_right = 1280.0
offset_bottom = 720.0
theme = SubResource("Theme_xjjsl")
theme_override_styles/normal = SubResource("StyleBoxFlat_kr0sy")
theme_override_styles/hover = SubResource("StyleBoxFlat_hxy4a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_cgx1x")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bymy4")
theme_override_styles/focus = SubResource("StyleBoxFlat_und64")

[node name="HirePanel" type="Panel" parent="."]
process_mode = 3
visible = false
custom_minimum_size = Vector2(400, 300)
offset_left = 339.0
offset_top = 211.0
offset_right = 863.0
offset_bottom = 511.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dct7x")

[node name="Label" type="Label" parent="HirePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.0
offset_top = 27.0
offset_right = 170.0
offset_bottom = 118.0
grow_horizontal = 2
text = "Hire Worker"
label_settings = ExtResource("7_idixr")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="HirePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_top = 127.0
offset_right = 182.0
offset_bottom = 193.0
grow_horizontal = 2
text = "Do you want to hire a new delivery stork? 
It will cost you 100     ."
label_settings = ExtResource("7_gfot6")
horizontal_alignment = 1

[node name="BirdCoin" type="Sprite2D" parent="HirePanel/Label2"]
position = Vector2(266, 51)
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_jqa5o")

[node name="HireButton" type="Button" parent="HirePanel"]
layout_mode = 0
offset_left = 307.0
offset_top = 225.0
offset_right = 427.0
offset_bottom = 265.0
theme = ExtResource("12_2caqd")
text = "HIRE"

[node name="CancelButton" type="Button" parent="HirePanel"]
layout_mode = 0
offset_left = 96.0
offset_top = 225.0
offset_right = 216.0
offset_bottom = 265.0
theme = ExtResource("12_2caqd")
text = "CANCEL"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_kt7bk")

[connection signal="baby_delivered" from="NavigationRegion2D/WorldModulate/birds/Bird" to="." method="_on_bird_baby_delivered"]
[connection signal="click" from="NavigationRegion2D/WorldModulate/birds/Bird" to="." method="_on_bird_click"]
[connection signal="marker_spawned" from="NavigationRegion2D/BabySpawner" to="." method="_on_baby_spawner_marker_spawned"]
[connection signal="timeout" from="TimeArea/TimeTimer" to="." method="_on_time_timer_timeout"]
[connection signal="click" from="DayEndPopup/EmployeeManagement/WorkerImage" to="." method="_on_worker_image_click"]
[connection signal="click" from="DayEndPopup/EmployeeManagement/WorkerImage2" to="." method="_on_worker_image_click"]
[connection signal="click" from="DayEndPopup/EmployeeManagement/WorkerImage3" to="." method="_on_worker_image_click"]
[connection signal="click" from="DayEndPopup/EmployeeManagement/WorkerImage4" to="." method="_on_worker_image_click"]
[connection signal="click" from="DayEndPopup/EmployeeManagement/WorkerImage6" to="." method="_on_worker_image_click"]
[connection signal="click" from="DayEndPopup/EmployeeManagement/WorkerImage7" to="." method="_on_worker_image_click"]
[connection signal="click" from="DayEndPopup/EmployeeManagement/WorkerImage8" to="." method="_on_worker_image_click"]
[connection signal="click" from="DayEndPopup/EmployeeManagement/WorkerImage9" to="." method="_on_worker_image_click"]
[connection signal="pressed" from="DayEndPopup/NextDay/NextDayButton" to="." method="_on_next_day_button_pressed"]
[connection signal="button_down" from="WorkerPanelBackdrop" to="." method="_on_worker_panel_backdrop_button_down"]
[connection signal="pressed" from="WorkerPanelBackdrop" to="." method="_on_worker_panel_backdrop_pressed"]
[connection signal="pressed" from="WorkerPanel/HBoxContainer/CancelButton" to="." method="_on_worker_cancel_button_pressed"]
[connection signal="pressed" from="WorkerPanel/HBoxContainer/FireButton" to="." method="_on_fire_button_pressed"]
[connection signal="button_down" from="HirePanelBackdrop" to="." method="_on_hire_panel_backdrop_button_down"]
[connection signal="pressed" from="HirePanelBackdrop" to="." method="_on_hire_panel_backdrop_pressed"]
[connection signal="pressed" from="HirePanel/HireButton" to="." method="_on_hire_button_pressed"]
[connection signal="pressed" from="HirePanel/CancelButton" to="." method="_on_cancel_button_pressed"]
